--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<html><head><title>Good</title></head> <body><h1>Very Good</h1></body></head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Guru Arjan Dev</title>
+  </head>
+  <body>
+    <h1>Guru Arjan Dev</h1>
+    <h2>General</h2>
+    <p>Guru Arjan Dev was sent to earth in  the year of 1563 on April 15th in <a href="https://en.wikipedia.org/wiki/Goindval">Goindval Punjab</a>.
+    His parents are Guru Ram Das and the daughter of Guru Amar Das.
+    He is the fifth guru of the sikh religion (learning a religion) and he spoke Punjabi.
+    He helped every body no matter what (He never feared death) in the future.
+    He merged with god on 30 May 1606.</p>
+    <h2>Examples Of What He Did</h2><ol><li>
+    
+    <p>He  and the previous Gurus wrote certain banis (Recitations) for certain effects.
+For example Japji Sahib. An example of a person who benefitted from the effects is Vazir Khan. Vazir Khan was plagued with a unknown disease and he tried all known cures. But all failed until,
+one day when a started sikh reciting Sukhmami Sahib in front of him.
+When he stopped the disease got worse.<br><br>The point is that bani is the cure of all suffering</p></li>
+    <li>Completed construction of the Darbar Sahib</li>
+    <li>Compiled the hymns of previous Gurus and of other saints into Adi Granth</li>
+    <li></li>
+    </ol>
+    <h1>Works Cited</h1>
+  <ol>
+    <li><a href="https://en.wikipedia.org/wiki/Guru_Arjan">Wikipedia</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Goindval">Wikipedia</a></li>
+    <li><a href="https://www.youtube.com/playlist?list=PL2lbLaiYahpX3GKE2TPK8p3C6d8AQgqEP">Sikhnet Stories</a></li>
+    <li><a href="https://www.sikhnet.com/stories/guru-arjan-dev-sacrifices-truth">Sikhnet Stories</a></li>
+    
+  </ol>
+</body>
+</html>
