--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Guru Arjan Dev</title>
+    <style>body {
+      font-family: "Times New Roman", Times, serif;
+      }</style>
   </head>
   <body>
     <h1>Guru Arjan Dev</h1>
