--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Guru Arjan Dev</title>
     <style>body {
       font-family: "Times New Roman", Times, serif;
+      background-color:Tomato;
       }</style>
   </head>
   <body>
