--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
   <head>
     <title>Guru Arjan Dev</title>
-    <style>body {
+    <style>ol {
       font-family: "Times New Roman", Times, serif;
       background-color:Tomato;
+      } h2, h1 {
+      font-family: "Times New Roman", Times, serif;
+      background-color:LimeGreen;
+      	}
+      a {
+      font-family: "Times New Roman", Times, serif;
+      color:Maroon;
+      background-color:MediumAquaMarine;
+      	}
+      p {
+      font-family: "Times New Roman", Times, serif;
+      background-color:LawnGreen;
       }</style>
   </head>
   <body>
@@ -35,3 +47,4 @@ When he stopped the disease got worse.<br><br>The point is that bani is the cure
   </ol>
 </body>
 </html>
+
