--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       p {
       font-family: "Times New Roman", Times, serif;
       background-color:LawnGreen;
+      }
+      b {
+      font-family: "Times New Roman", Times, serif;
+      background-color:Magenta;
       }</style>
   </head>
   <body>
@@ -32,7 +36,7 @@
     <p>He  and the previous Gurus wrote certain banis (Recitations) for certain effects.
 For example Japji Sahib. An example of a person who benefitted from the effects is Vazir Khan. Vazir Khan was plagued with a unknown disease and he tried all known cures. But all failed until,
 one day when a started sikh reciting Sukhmami Sahib in front of him.
-When he stopped the disease got worse.<br><br>The point is that bani is the cure of all suffering</p></li>
+When he stopped the disease got worse.<br><br><b>The point is that bani is the cure of all suffering</b></p></li>
     <li>Completed construction of the Darbar Sahib</li>
     <li>Compiled the hymns of previous Gurus and of other saints into Adi Granth</li>
     <li></li>
