--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <html>
   <head>
     <title>Guru Arjan Dev</title>
-    <style>ol {
+    <style>
+    * {
+    padding: 20px;border-radius: 99px;
+    }
+    ol {
       font-family: "Times New Roman", Times, serif;
       background-color:Tomato;
       } h2, h1 {
@@ -14,6 +18,7 @@
       font-family: "Times New Roman", Times, serif;
       color:Maroon;
       background-color:MediumAquaMarine;
+      padding: 4px;
       	}
       p {
       font-family: "Times New Roman", Times, serif;
@@ -22,6 +27,10 @@
       b {
       font-family: "Times New Roman", Times, serif;
       background-color:Magenta;
+      }
+      li {
+      font-family: "Times New Roman", Times, serif;
+      background-color:Yellow;
       }</style>
   </head>
   <body>
@@ -38,8 +47,8 @@
 For example Japji Sahib. An example of a person who benefitted from the effects is Vazir Khan. Vazir Khan was plagued with a unknown disease and he tried all known cures. But all failed until,
 one day when a started sikh reciting Sukhmami Sahib in front of him.
 When he stopped the disease got worse.<br><br><b>The point is that bani is the cure of all suffering</b></p></li>
-    <li>Completed construction of the Darbar Sahib</li>
-    <li>Compiled the hymns of previous Gurus and of other saints into Adi Granth</li>
+    <li><p>Completed construction of the Darbar Sahib</p></li>
+    <li><p>Compiled the hymns of previous Gurus and of other saints into Adi Granth</p></li>
     <li></li>
     </ol>
     <h1>Works Cited</h1>
@@ -52,5 +61,4 @@ When he stopped the disease got worse.<br><br><b>The point is that bani is the c
   </ol>
 </body>
 </html>
-
 
